--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,3 +17,7 @@ rand = "0.9.1"
 base64 = "0.22.1"
 futures = "0.3.31"
 chrono = { version = "0.4.41", features = ["serde"] }
+libc = "0.2.172"
+
+[build-dependencies]
+pkg-config = "0.3.32"
